Restructured everything and increased caption font size

--- a/source/_static/css/studica-rtd.css
+++ b/source/_static/css/studica-rtd.css
@@ -34,6 +34,7 @@
 /* Change caption color to be more legible */
 .wy-menu > .caption > span.caption-text {
    color: #F7E341;
+   font-size: 20px;
 }
 
 /* Change the version color to match caption color */
